# soundspace

./: Makefile  README.md
common/cpp/: interpol.cpp  json_builder.cpp  json_builder.h
soundspace/: soundspace.cpp
src/: CMakeLists.txt  soundspace.conf.sample  soundspace.cpp
src/CMake/: FindJsonCpp.cmake  FindLibEvent.cmake
src/libs/: CMakeLists.txt  interpol.h  json_builder.h
